# CCAT-monFinTrack

./: .aiignore  .firebaserc  .gitignore  ARCHITECTURE.md  FIRESTORE_SCHEMA.md  MIGRATION_GUIDE.md  README.md  TERMS_AND_PRIVACY.md  build_error.txt  build_log_utf8.txt  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules  gcs-lifecycle.json  llms.txt  package-lock.json  package.json  render.yaml  storage.rules
backend/: .gitignore  Dockerfile  README.md  check_customer.py  check_users.py  cloudbuild.yaml  create_test_stripe.py  get_last_webhook.py  pyproject.toml  requirements.txt  test_auth.py  test_auth_link.py  test_auth_real.py  test_auth_real2.py  test_auth_real3.py  test_email.py  test_filters.py  test_firebase.py  test_send_email.py  test_stripe.py  test_stripe_repro.py  update_user_tier.py  verify_auto_pay.py  verify_auto_pay_simple.py  verify_calculator.py  verify_log.txt
backend/app/: main.py  worker.py
backend/scripts/: migrate_to_saas.py  test_notifications.py
backend/tests/: conftest.py  debug_3.txt  debug_4.txt  debug_5.txt  debug_log.txt  debug_output.txt  debug_output_2.txt  debug_utf8.txt  draft_test.py  list_models.py  real_user_repro.py  repro_monthly_report.py  run_tests_debug.py  test_account_service.py  test_analysis_cost_of_living.py  test_auth.py  test_auth_real.py  test_auth_real2.py  test_auth_real3.py  test_balance_transaction_security.py  test_budget_service.py  test_category_service.py  test_dashboard_fix.py  test_debt_scanner_planner.py  test_email.py  test_filters.py  test_firebase.py  test_mfa_security.py  (+16 more)
(+277 files in other folders)
